--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,29 +1,37 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@font-face {
+  font-family: 'Miller';
+  src: url('@/../../../public/fonts/MillerTextRoman.otf');
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@font-face {
+  font-family: 'AktivGrotesk';
+  font-weight: normal;
+  src: url('@/../../../public/fonts/AktivGrotesk-Light.ttf');
+  font-style: normal;
+}
+@font-face {
+  font-family: 'AktivGrotesk';
+  font-weight: normal;
+  src: url('@/../../../public/fonts/AktivGrotesk-LightItalic.ttf');
+  font-style: italic;
+}
+@font-face {
+  font-family: 'AktivGrotesk';
+  font-weight: bold;
+  src: url('@/../../../public/fonts/AktivGrotesk-Medium.ttf');
+  font-style: normal;
+}
+@font-face {
+  font-family: 'AktivGrotesk';
+  font-weight: bold;
+  src: url('@/../../../public/fonts/AktivGrotesk-MediumItalic.ttf');
+  font-style: italic;
 }
 
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
 }
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -34,9 +42,27 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
+h1,h2,h3,h4,h5,h6{
+  font-size: 30px;
+  font-family: 'Miller';
+  /* letter-spacing: 0; */
+  font-weight: normal;
+}
+span, a{
+  font-family: 'AktivGrotesk';
+}
+@media(max-width: 1000px){
+  h1,h2,h3,h4,h5,h6{
+    font-size: 30px;
+  }
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
+}
+.parent-container:has(.intro-container.inactive) .slideshow-container{
+  opacity: 1; 
+  transition: 1.5s ease-in;
+  transition-delay: 1.5s;
 }
