--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,3 +66,15 @@ span, a{
   transition: 1.5s ease-in;
   transition-delay: 1.5s;
 }
+@media(max-width: 1000px){
+  html,
+  body {
+    max-width: 100vw;
+    overflow-x: hidden;
+  }
+  .parent-container .slideshow-container{
+    opacity: 1; 
+    transition: 1.5s ease-in;
+    transition-delay: 1.5s;
+  }
+}
