--- a/src/app/components/Slideshow/Slideshow.css
+++ b/src/app/components/Slideshow/Slideshow.css
@@ -49,8 +49,8 @@
 .slideshow-container .descriptions-selectors-container .descriptions-container .description-container.active{
     opacity: 1;
     visibility: visible;
-    transition: all 0.5s ease-in;
-    transition-delay: 0.5s;
+    transition: all 0.35s ease-in;
+    transition-delay: 0.35s;
 }
 .slideshow-container .descriptions-selectors-container .descriptions-container .description-container span{
     display: block;
@@ -83,13 +83,16 @@
     width: calc(100% - 550px);
     height: 100%;
     top: 0;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
     overflow-x: hidden;
     z-index: 5;
     cursor: e-resize;
+    
 }
-
-
+.slideshow-container .carousel-container:has(.carousel-images-container.active){
+    height: 100%;
+    
+}
 .slideshow-container .carousel-container .carousel-images-container{
     position: absolute;
     right: 0px;
@@ -99,14 +102,156 @@
     height: 100%;
     opacity: 0;
     z-index: -1;
-    transition: all .5s ease-in;
+    visibility: hidden;
+    /* transition: all 0.5s ease-in;
+    transition-property: opacity, visibility, z-index, height, max-height;
+    transition-delay: 0s, 0s, 0.5s, 0.5s, 0.5s; */
+    max-height: 100vh;
+    overflow: hidden;
+    margin-bottom: 50px;
 }
-
 .slideshow-container .carousel-container .carousel-images-container.active{
     opacity: 1;
+    visibility: visible;
     z-index: 1;
-    transition: all .5s ease-in;
-    transition-delay: .5s;
+    height: 100%;
+    /* transition: all 0.5s ease-in;
+    transition-property: opacity, visibility, z-index, height, max-height;
+    transition-delay: 1s, 0s, 0s, 0.25s, 0.25s; */
+    max-height: unset;
+    overflow: auto;
+}
+
+.slideshow-container .carousel-container .carousel-images-container .carousel-image.center{
+    width: fit-content;
+    position: absolute;
+    top: 50%;   
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.slideshow-container .carousel-container .carousel-images-container .carousel-image.img-1-1-1{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);   
+    height: calc(100vh - 100px);
+    width: auto;
+}
+.slideshow-container .carousel-container .carousel-images-container[slide-index="1"].active{
+    height: 1100px;
+}
+.slideshow-container .carousel-container .carousel-images-container .carousel-image.img-1-2-1{
+    position: absolute;
+    bottom: 50px;
+    right: 50px;
+    width: 400px;
+    height: auto;   
+}
+.slideshow-container .carousel-container .carousel-images-container .carousel-image.img-1-2-2{
+    position: absolute;
+    top: 50px;
+    left: 0;
+    width: 400px;
+    height: auto;   
+}
+.slideshow-container .carousel-container .carousel-images-container .carousel-image.img-1-3-1{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+    width: 250px;
+    height: auto;   
+}
+.slideshow-container .carousel-container .carousel-images-container .carousel-image.img-1-3-2{
+    position: absolute;
+    top: 50%;
+    left: calc(50% - 25px);
+    transform: translate(-50%, -50%);
+    width: 350px;
+    height: auto;   
+}
+.slideshow-container .carousel-container .carousel-images-container .carousel-image.img-1-3-3{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 50px;
+    width: 250px;
+    height: auto;   
+}
+.slideshow-container .carousel-container .carousel-images-container.project-1-4{
+   display: grid;
+   grid-template-columns: repeat(2, 1fr);
+   grid-template-rows: repeat(2, 1fr);
+   gap: 10px;   
+}
+.slideshow-container .carousel-container .carousel-images-container.project-1-4 .carousel-image{
+    width: 100%;
+    height: auto;
+}
+.slideshow-container .carousel-container .carousel-images-container.project-3-1{
+    display: flex;
+    width: 100%;
+    gap: 15px;
+    align-items: center;
+    justify-content: center;
+    padding-right: 50px;
+}
+.slideshow-container .carousel-container .carousel-images-container .carousel-image.img-3-1-1{
+    width: auto;
+    height: 500px;
+}
+.slideshow-container .carousel-container .carousel-images-container .carousel-image.img-3-1-2{
+    width: auto;
+    height: 500px;
+}
+.slideshow-container .carousel-container .carousel-images-container.project-3-2{
+    display: flex;
+    width: 100%;
+    gap: 15px;
+    align-items: center;
+    justify-content: center;
+    padding-right: 50px;
+}
+.slideshow-container .carousel-container .carousel-images-container .carousel-image.img-3-2-3{
+    width: auto;
+    height: 600px;
+}
+.slideshow-container .carousel-container .carousel-images-container .carousel-image.img-3-2-1{
+    width: auto;
+    height: 600px;
+}
+.slideshow-container .carousel-container .carousel-images-container:has(.carousel-image.img-3-1-1){
+    display: flex;
+    width: 100%;
+    gap: 15px;
+    align-items: center;
+    justify-content: center;
+    padding-right: 50px;
+}
+.slideshow-container .carousel-container .carousel-images-container.project-4-2{
+    display: flex;
+    width: 100%;
+    gap: 15px;
+    align-items: center;
+    justify-content: center;
+    padding-right: 50px;
+}
+.slideshow-container .carousel-container .carousel-images-container.project-4-2 img{
+    height: 350px;
+    width: auto;
+}
+.slideshow-container .carousel-container .carousel-images-container.project-6-1{
+    display: flex;
+    width: 100%;
+    gap: 15px;
+    align-items: center;
+    justify-content: center;
+    padding-right: 50px;
+}
+.slideshow-container .carousel-container .carousel-images-container.project-6-1 img{
+    width: 300px;
+    height: auto;
 }
 @media(max-width: 1000px){
     .slideshow-container{
@@ -180,5 +325,13 @@
     .slideshow-container .carousel-container .carousel-images-container img, .carousel-images-container video{
         width: 100%;
         height: auto;
+    }
+    .slideshow-container .carousel-container .carousel-images-container.active{
+        position: relative!important;
+    }
+    .slideshow-container .carousel-container .carousel-images-container .carousel-image{
+        position: relative!important;
+        width: 100%!important;
+        height: auto!important;
     }
 }   
