--- a/src/app/components/Intro/Intro.css
+++ b/src/app/components/Intro/Intro.css
@@ -14,7 +14,7 @@
 .intro-container .intro-text-container{
     position: absolute;
     width: 100%;
-    padding: 0 50px;
+    padding: 0 25px;
     /* height: 100%; */
     top: 50%;
     left: 50%;
@@ -67,6 +67,23 @@
     backdrop-filter: blur(0px);
     transition: all 1.5s ease-in;
 }
+.intro-container .intro-vid-container .black-bg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 1;
+    transition: opacity 1s ease-in, z-index .25s ease-in 1s;
+    z-index: 4;
+}
+.intro-container .intro-vid-container .black-bg.inactive{
+    opacity: 0;
+    z-index: -1;
+    transition: opacity 1s ease-in, z-index .25s ease-in 1s;
+}
 .intro-container .intro-vid-container video{
     width: 100%;
     height: 100%;
@@ -80,6 +97,9 @@
 .intro-container.inactive .intro-vid-container{
     opacity: 0;
     transition: 1.5s all ease-in;
+}
+.intro-container.inactive .intro-vid-container video{
+    transform: all 1s ease-in;
 }
 @media(max-width: 1000px){
     .intro-container{
