--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,21 @@
   src: url('@/../../../public/fonts/AktivGrotesk-MediumItalic.ttf');
   font-style: italic;
 }
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: none;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #000;
+  border-radius: 10px;
+}
+
 
 html,
 body {
