--- a/src/app/components/Slideshow/Slideshow.css
+++ b/src/app/components/Slideshow/Slideshow.css
@@ -166,6 +166,7 @@
     left: 0;
     width: 250px;
     height: auto;   
+    z-index: 1;
 }
 .slideshow-container .carousel-container .carousel-images-container .carousel-image.img-1-3-2{
     position: absolute;
@@ -174,6 +175,7 @@
     transform: translate(-50%, -50%);
     width: 350px;
     height: auto;   
+    z-index: 2;
 }
 .slideshow-container .carousel-container .carousel-images-container .carousel-image.img-1-3-3{
     position: absolute;
@@ -182,6 +184,7 @@
     right: 50px;
     width: 250px;
     height: auto;   
+    z-index: 1;
 }
 .slideshow-container .carousel-container .carousel-images-container.project-1-4{
    display: grid;
@@ -193,6 +196,15 @@
 .slideshow-container .carousel-container .carousel-images-container.project-1-4 .carousel-image{
     width: 100%;
     height: auto;
+}
+.slideshow-container .carousel-container .carousel-images-container.project-1-5.active{
+    text-align: center;
+}
+.slideshow-container .carousel-container .carousel-images-container .carousel-image.img-1-5-5{
+    width: auto;
+    height: 100%;
+    padding: 50px 25px;
+    margin: auto;
 }
 .slideshow-container .carousel-container .carousel-images-container.project-3-1{
     display: flex;
@@ -307,7 +319,7 @@
     }
     .slideshow-container .descriptions-selectors-container .descriptions-container{
         width: 50%;
-        min-height: 85px;
+        min-height: 100px;
         margin-bottom: 0;
     }
     .slideshow-container .descriptions-selectors-container .descriptions-container .description-container{
@@ -369,6 +381,9 @@
         transform: unset!important; 
         bottom: unset!important;
         right: unset!important;
+    }
+    .slideshow-container .carousel-container .carousel-images-container .carousel-image.img-1-5-5{
+        padding: 25px 0;
     }
     .slideshow-container .carousel-container .carousel-images-container:has(.carousel-image.img-3-1-1){
         flex-wrap: wrap;
