--- a/src/app/components/Slideshow/Slideshow.css
+++ b/src/app/components/Slideshow/Slideshow.css
@@ -11,6 +11,13 @@
 .slideshow-container .mobile-header{
     display: none;
 }
+.carousel-image iframe{
+    max-width: 800px;
+    height: 500px;
+    top: 50%;
+    position: relative;
+    transform: translateY(-50%);
+}
 .slideshow-container .socials{
     font-size: 16px;
     font-style: italic;
@@ -279,6 +286,13 @@
         width: 250px;
         height: auto;
     }
+    
+}
+@media(max-width: 1300px){
+    .carousel-image iframe{
+        max-width: 500px;
+        height: 300px;
+    }
 }
 @media(max-width: 1000px){
     .slideshow-container{
@@ -289,6 +303,12 @@
         top: unset;
         left: unset;
         
+    }
+    .carousel-image iframe{
+        max-width: 100%;
+        height: 400px;
+        transform: unset;
+        top: unset;
     }
     .slideshow-container .mobile-header{
         display: block;
